# ansi_colle.windows

./: .editorconfig  .gitignore  .nvim.lua  CHANGELOG.rst  README.md  ansible.cfg  bootstrap.ps1  galaxy.yml  pyproject.toml  pytest.ini
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 00-ssh.yaml  01-bugs.yaml  03-minor.yaml  major_changes.yaml  v1.0.1_summary.yaml
playbooks/: install.yml  ping.yml  site.yml
playbooks/group_vars/: windows.yml
playbooks/host_vars/: localhost.yml
roles/dev/: README.md
roles/dev/meta/: main.yml
roles/dev/tasks/: main.yml
roles/dockerdesktop/: README.md
roles/dockerdesktop/meta/: main.yml
roles/dockerdesktop/tasks/: main.yml
roles/home/: README.md
roles/home/defaults/: main.yml
roles/home/files/: .gitconfig  profile.ps1
roles/home/meta/: main.yml
roles/home/tasks/: main.yml
roles/home/tests/: test_packages.py  test_windows_home.py
roles/install/: README.md
roles/install/meta/: main.yml
roles/install/tasks/: main.yml
roles/install/vars/: main.yml
roles/python/meta/: argument_specs.yml  main.yml
roles/python/tasks/: main.yml
roles/scoop/: README.md
roles/scoop/meta/: main.yml
roles/scoop/tasks/: main.yml
roles/winget/: README.md
roles/winget/meta/: main.yml
roles/winget/tasks/: main.yml
roles/wsl/defaults/: main.yml
roles/wsl/meta/: main.yml
roles/wsl/tasks/: main.yml
