[project]
name = "ansi_colle-windows"
dynamic = ["version"]
description = "Namespace that stores Ansible collections."

license = "MIT"

authors = [
    {name = "Chun Pan Yung", email = "31672021+ChunPanYung@users.noreply.github.com"},
]

repository = "https://github.com/chunpanyung/ansi_colle-windows"

dependencies = [
    "ansible>=9.2.0",
    "tomli-w>=1.0.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
install = "ansible-playbook ansi_colle.windows.install"
exec = "ansible-playbook ansi_colle.windows.site --ask-become-pass --inventory"
changelog = "git-cliff --prepend CHANGELOG.md --unreleased --tag"

[tool.pdm.version]
source = "scm"
